# graphql-conformance

./: .dockerignore  .gitignore  .mise.toml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SPEC  SPEC.md  TODO.md  config.json  docker-compose.yml  registry.json  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yml  daily-conformance.yml  pages.yml
conformer/: .gitignore  Makefile  config.json  package-lock.json  package.json
conformer/corpus-gen/: Makefile  build.gradle.kts
conformer/results/: index.js  index.test.js
conformer/src/: build.js  builder.js  builder.test.js  check.js  compare.js  compare.test.js  concurrency.test.js  corpus.js  corpus.test.js  diff-impl.js  docker.js  docker.test.js  driver.js  driver.test.js  execute.js  execute.test.js  grafast.driver.test.js  hot-chocolate.driver.test.js  impl-cli.js  impl-make.js  impl-make.test.js  index.js  index.test.js  integration.test.js  registry.js  registry.test.js  run-impl.js  runner.js  (+6 more)
corpus-gen/: Makefile  build.gradle.kts  settings.gradle.kts
impls/: Makefile
impls/async-graphql/: .gitignore  Cargo.toml  Dockerfile  Makefile  conformer-harness.test.js  manifest.json
impls/async-graphql/src/: main.rs  server.rs
impls/juniper/: .dockerignore  Cargo.toml  Dockerfile  Makefile  conformer-harness.test.js  manifest.json
impls/juniper/src/: main.rs  server.rs
results/: Makefile  index.js  index.test.js  memory.js
scripts/: backfill-run-ids-to-uuid.js  ci-prebuild-impls.sh  copy-site-data.sh  copy-site-data.test.js  graphql-js-17-version.js  graphql-js-17-version.test.js  migrate-sha-to-version.js  prune-orphan-runs.js  serve-site.py
site/: app.js  build.js  build.test.js  index.html  package-lock.json  package.json  render.js  render.test.js  style.css  vite.config.ts
site-react/: .gitignore  index.html  tsconfig.json  vite.config.ts
(+9103 files in other folders)
