[package]
name = "async-graphql-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7", features = ["dynamic-schema"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "server"
path = "src/server.rs"
