[package]
name = "juniper-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
juniper = { git = "https://github.com/graphql-rust/juniper", rev = "1e625cd5ff55e6efa9fbef751f222b909ea4f3af" }
graphql-parser = "0.4"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "server"
path = "src/server.rs"
