[package]
name = "juniper-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
juniper = { git = "https://github.com/graphql-rust/juniper", rev = "653d8391968ad7271a90a78693ee2e6abed6746d" }
graphql-parser = "0.4"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "server"
path = "src/server.rs"
