[package]
name = "juniper-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
juniper = { git = "https://github.com/graphql-rust/juniper", tag = "juniper-v0.17.1" }
graphql-parser = "0.4"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "server"
path = "src/server.rs"
